wrapper.h

typedef struct {
    void* handle;
    int fd;
    const char* file_path;
    int flags;
    int mode;
    int error;
} km_io_file_t;
bool km_io_file_close(km_io_file_t* file);
ssize_t km_io_file_read(km_io_file_t* file, void* buffer, size_t len);
ssize_t km_io_file_write(km_io_file_t* file, const void* buffer, size_t len);
ssize_t km_io_file_read_offset(km_io_file_t* file, uintptr_t offset, void* buffer, size_t len);
ssize_t km_io_file_write_offset(km_io_file_t* file, uintptr_t offset, const void* buffer, size_t len);
bool km_io_file_exists(const char* file_path);
bool km_io_file_can_read(const char* file_path);
bool km_io_file_can_write(const char* file_path);
bool km_io_file_can_execute(const char* file_path);
bool km_io_file_is_file(const char* file_path);
bool km_io_file_delete(const char* file_path);
bool km_io_file_read_to_string(const char* file_path, char** out_str);
bool km_io_file_read_to_buffer(const char* file_path, void** out_buffer, size_t* out_size);
bool km_io_file_write_to_file(km_io_file_t* file, uintptr_t offset, size_t len, const char* dest_path);
bool km_io_file_write_to_file_simple(km_io_file_t* file, const char* dest_path);
bool km_io_file_write_to_fd(km_io_file_t* file, int fd);
bool km_io_file_copy(const char* src_path, const char* dst_path);
int km_io_file_last_error(km_io_file_t* file);
char* km_io_file_last_str_error(km_io_file_t* file);
void km_io_file_free(km_io_file_t* file);