bindings.rs

extern "C" {
    pub fn km_io_file_close(file: *mut km_io_file_t) -> bool;
}
extern "C" {
    pub fn km_io_file_read(
        file: *mut km_io_file_t,
        buffer: *mut ::std::os::raw::c_void,
        len: usize,
    ) -> isize;
}
extern "C" {
    pub fn km_io_file_write(
        file: *mut km_io_file_t,
        buffer: *const ::std::os::raw::c_void,
        len: usize,
    ) -> isize;
}
extern "C" {
    pub fn km_io_file_read_offset(
        file: *mut km_io_file_t,
        offset: usize,
        buffer: *mut ::std::os::raw::c_void,
        len: usize,
    ) -> isize;
}
extern "C" {
    pub fn km_io_file_write_offset(
        file: *mut km_io_file_t,
        offset: usize,
        buffer: *const ::std::os::raw::c_void,
        len: usize,
    ) -> isize;
}
extern "C" {
    pub fn km_io_file_exists(file_path: *const ::std::os::raw::c_char) -> bool;
}
extern "C" {
    pub fn km_io_file_can_read(file_path: *const ::std::os::raw::c_char) -> bool;
}
extern "C" {
    pub fn km_io_file_can_write(file_path: *const ::std::os::raw::c_char) -> bool;
}
extern "C" {
    pub fn km_io_file_can_execute(file_path: *const ::std::os::raw::c_char) -> bool;
}
extern "C" {
    pub fn km_io_file_is_file(file_path: *const ::std::os::raw::c_char) -> bool;
}
extern "C" {
    pub fn km_io_file_delete(file_path: *const ::std::os::raw::c_char) -> bool;
}
extern "C" {
    pub fn km_io_file_read_to_string(
        file_path: *const ::std::os::raw::c_char,
        out_str: *mut *mut ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn km_io_file_read_to_buffer(
        file_path: *const ::std::os::raw::c_char,
        out_buffer: *mut *mut ::std::os::raw::c_void,
        out_size: *mut usize,
    ) -> bool;
}
extern "C" {
    pub fn km_io_file_write_to_file(
        file: *mut km_io_file_t,
        offset: usize,
        len: usize,
        dest_path: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn km_io_file_write_to_file_simple(
        file: *mut km_io_file_t,
        dest_path: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn km_io_file_write_to_fd(file: *mut km_io_file_t, fd: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    pub fn km_io_file_copy(
        src_path: *const ::std::os::raw::c_char,
        dst_path: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn km_io_file_last_error(file: *mut km_io_file_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn km_io_file_last_str_error(file: *mut km_io_file_t) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn km_io_file_free(file: *mut km_io_file_t);
}
